# LSM-P2

./: .gitignore  .mcp.json  .utils.conf  CLAUDE.md  CODE_REVIEW.md  PROJECT_FINISH_PLAN.md  README.md  default.env  final_sprint_checklist.md  main.py  project_config.yaml  pyproject.toml  run_solver.py  setup_mlflow.py  todos.md
.github/workflows/: docs.yml
00-TODOS/: action_plan.md  final_sprint_checklist.md  solver-interface.md
Examples/example_integration/: plot_integration.py
Experiments/: GALLERY_HEADER.rst  REFACTORING_PLAN.md  run_experiment.py
Experiments/01-kernels/: README.rst  compute_01_convergence.py  compute_02_benchmark.py  compute_03_tolerance_benchmark.py  compute_all.py  plot_kernels.py  run_kernel.py
Experiments/02-decomposition/: README.rst  compute_cubic.py  compute_sliced.py  (+3 more)
conf/: config.yaml
jobs/: README.md  baseline.sh  comm_compact.sh  comm_spread.sh  fmg_scaling_1node.sh  scaling.sh  strong_scaling_1node.sh  strong_scaling_2node.sh  strong_scaling_4node.sh  strong_scaling_fmg_hybrid.sh  strong_scaling_jacobi.sh  submit_scaling.sh  weak_scaling.sh  weak_scaling_debug.sh  weak_scaling_v2.sh  weak_scaling_v3.sh  weak_scaling_v4.sh
legacyReference/: base.py
scripts/: explore_weak_scaling.py  plot_strong_scaling_comparison.py  plot_weak_scaling.py  plot_weak_scaling_all.py
tests/: __init__.py  test_communicators.py  test_decomposition.py  test_kernels.py  test_mpi_integration.py  test_mpi_multigrid.py  test_multigrid_fmg.py  test_multigrid_operators.py  test_problems.py  test_solver.py  test_tui_navigation.py  verify_convergence.py
(+762 files in other folders)
