[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "poisson_solver"
version = "0.1.0"
description = "MPI Poisson Solver"
readme = "README.md"
requires-python = "==3.12.*"
license = { text = "MIT" }
authors = [
    { name = "Alexander Elbæk Nielsen" },
    { name = "Junriu Li" },
    { name = "Philip Korsager Nickel" }
]

# All dependencies (runtime, docs, and dev)
dependencies = [
  # Runtime dependencies
  "numpy>=1.24.0",
  "matplotlib>=3.7.0",
  "pandas>=2.0.0",
  "pyarrow>=14.0.0",
  "scipy>=1.11.0",
  "seaborn>=0.12.0",
  # Documentation dependencies
  "sphinx>=7.0.0,<9.0.0", # numpydoc 1.9.0 incompatible with sphinx 9.x
  "pydata-sphinx-theme>=0.14.0",
  "numpydoc>=1.6.0",
  "sphinx-copybutton>=0.5.2",
  "sphinx-gallery>=0.14.0",
  "sphinxcontrib-mermaid>=0.9.2",
  "pillow>=10.0.0", # Required for sphinx-gallery image handling
  # Development dependencies
  "ruff>=0.1.0",
  "pytest>=7.4.0",
  "pytest-cov>=4.1.0",
  "numba>=0.62.1",
  "mpi4py>=4.1.1",
  "mlflow>=3.6.0",
  "pyvista>=0.46.4",
  "h5py>=3.15.1",
  "tables>=3.10.2",
  "psutil>=7.1.3",
  "pyyaml>=6.0.3",
  "questionary>=2.1.1",
  "python-dotenv>=1.2.1",
  "hydra-core>=1.3.2",
  "omegaconf>=2.3.0",
  "hydra-submitit-launcher>=1.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore::UserWarning"]
addopts = "-ra"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]




